# ristretto

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  ClientTestAudio8KHz.raw  README.md  buildClient.sh  buildServer.sh  clientEntry.sh  conanfile.py  kaldiTcpClient.sh  kaldiTcpServer.sh  runClientTests.sh  runProtoc.sh  runTests.sh  serverConfig.json  serverEntry.sh
.github/workflows/: main.yml
alsalib-examples/: Makefile  TestCapture  TestPlayback  latency.c  testCapture.c  testPlayback.c
cmake/: CompilerWarnings.cmake  Conan.cmake
docker/: .dockerignore  .env  Client.Dockerfile  Dockerfile  Server.Dockerfile  docker-compose.yml
src/: AlsaCapture.cpp  AlsaInterface.cpp  AlsaInterface.hpp  AlsaPlayback.cpp  CMakeLists.txt  DecoderClient.cpp  DecoderClient.hpp  DecoderInterface.cpp  DecoderInterface.hpp  KaldiClient.hpp  Makefile  Recorder.hpp  Utils.cpp  Utils.hpp  main.cpp  testCapture.c  testPlayback.c
src/client/: CMakeLists.txt  RistrettoClient.cpp  RistrettoClient.hpp  Utils.cpp  Utils.hpp  main.cpp
src/client/AlsaInterface/: AlsaCapture.cpp  AlsaInterface.cpp  AlsaInterface.hpp  AlsaPlayback.cpp  CMakeLists.txt  main.cpp
src/client/TcpClient/: CMakeLists.txt  TcpClient.cpp  TcpClient.hpp  main.cpp
src/client/docker/: Dockerfile  Dockerfile-Alpine
src/protos/: ristretto.proto
src/server/: CMakeLists.txt  KaldiInterface.cpp  KaldiInterface.hpp  KaldiTcpServer.cpp  RistrettoServer.cpp  RistrettoServer.hpp  Utils.cpp  Utils.hpp  main.cpp  startOnline2TcpServer.sh
src/server/docker/: Dockerfile
test/: CMakeLists.txt  ClientTest.cpp
test/client/: AlsaTest.cpp  CMakeLists.txt  ClientTest.cpp  UtilsTest.cpp  main.cpp
test/resources/: testServerConfig.json  unittestPlayback.raw
test/server/: CMakeLists.txt  ServerTest.cpp  TestUtils.hpp
